--- a/todolist-frontend/src/app/components/nav/nav.component.html
+++ b/todolist-frontend/src/app/components/nav/nav.component.html
@@ -1,11 +1,16 @@
 <ul class="nav nav-tabs">
   <li class="nav-item">
-    <a class="nav-link" aria-current="page" href="#">Home</a>
+    <a class="nav-link" aria-current="page" routerLink="/tasks">Home</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" routerLink="/login">Login</a>
+    <a class="nav-link" *ngIf="!isLoggedIn()" routerLink="/login">Login</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" routerLink="/register">Register</a>
+    <a class="nav-link" *ngIf="!isLoggedIn()" routerLink="/register"
+      >Register</a
+    >
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" *ngIf="isLoggedIn()" (click)="logoutUser()">logout</a>
   </li>
 </ul>
