--- a/todolist-frontend/src/app/components/registration/registration.component.html
+++ b/todolist-frontend/src/app/components/registration/registration.component.html
@@ -6,10 +6,22 @@
           <h2>Registrieren</h2>
         </div>
         <div class="card-body">
-          <form action="/register" method="post">
+          <form (ngSubmit)="registerUser()">
+            <div class="form-group">
+              <label for="username">Name</label>
+              <input
+                [(ngModel)]="registerForm.name"
+                type="text"
+                class="form-control"
+                id="name"
+                name="name"
+                placeholder="Vollständige Name eingeben"
+              />
+            </div>
             <div class="form-group">
               <label for="username">Benutzername</label>
               <input
+                [(ngModel)]="registerForm.username"
                 type="text"
                 class="form-control"
                 id="username"
@@ -20,6 +32,7 @@
             <div class="form-group">
               <label for="password">Passwort</label>
               <input
+                [(ngModel)]="registerForm.password"
                 type="password"
                 class="form-control"
                 id="password"
@@ -30,6 +43,7 @@
             <div class="form-group">
               <label for="email">E-Mail</label>
               <input
+                [(ngModel)]="registerForm.email"
                 type="email"
                 class="form-control"
                 id="email"
