add validate for login and registration

--- a/todolist-frontend/src/app/app.component.html
+++ b/todolist-frontend/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="conntainer-fluid font-Neucha">
+<div class="container conntainer-fluid font-Neucha">
   <app-nav></app-nav>
   <router-outlet></router-outlet>
   <app-footer></app-footer>
