--- a/todolist-frontend/src/app/components/nav/nav.component.html
+++ b/todolist-frontend/src/app/components/nav/nav.component.html
@@ -1,6 +1,6 @@
 <ul class="nav nav-tabs">
   <li class="nav-item">
-    <a class="nav-link" aria-current="page" routerLink="/tasks">Home</a>
+    <a class="nav-link" aria-current="page" routerLink="/">Home</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" *ngIf="!isLoggedIn()" routerLink="/login">Login</a>
