--- a/todolist-frontend/src/app/components/add-task/add-task.component.html
+++ b/todolist-frontend/src/app/components/add-task/add-task.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
   <h1>To-Do List</h1>
   <div class="card mb-3">
     <div class="card-body">
@@ -49,4 +49,22 @@
   >
     Add Card
   </button>
+</div> -->
+<div class="container py-3">
+  <h1 class="display-4 text-center">To Do List</h1>
+
+  <form id="add-task-form" class="mb-3">
+    <div class="input-group">
+      <input
+        type="text"
+        class="form-control"
+        id="task-name"
+        name="task-name"
+        placeholder="Enter your task"
+      />
+      <button type="submit" class="btn btn-primary">Add Task</button>
+    </div>
+  </form>
+
+  <ul class="list-group task-list" id="task-list"></ul>
 </div>
