--- a/todolist-frontend/src/app/components/login/login.component.html
+++ b/todolist-frontend/src/app/components/login/login.component.html
@@ -1,38 +1,58 @@
-<div class="container">
-  <div class="row justify-content-center">
-    <div class="col-md-6">
-      <div class="card">
-        <div class="card-header">
-          <h2>Login</h2>
+<div class="row">
+  <div class="col-sm-6 col-md-7 intro-section">
+    <div class="intro-content-wrapper">
+      <h1 class="intro-title">Welcome to To-do-list !</h1>
+      <p class="intro-text">
+        Melden Sie sich mit Ihren Zugangsdaten an und greifen Sie auf alle
+        Funktionen zu. Haben Sie noch keinen Zugang? Registrieren Sie sich
+        jetzt!
+      </p>
+      <a href="/register" class="btn btn-read-more">Registration</a>
+    </div>
+  </div>
+  <div class="col-sm-6 col-md-5 form-section">
+    <div class="login-wrapper">
+      <h2 class="login-title">Sign in</h2>
+      <form (ngSubmit)="loginUser()">
+        <div class="form-group">
+          <input
+            [(ngModel)]="loginForm.value.username"
+            type="username"
+            name="username"
+            id="username"
+            class="form-control"
+            placeholder="Username"
+            required
+          />
         </div>
-        <div class="card-body">
-          <form (ngSubmit)="loginUser()">
-            <div class="form-group">
-              <label for="username">Benutzername</label>
-              <input
-                [(ngModel)]="loginForm.username"
-                type="text"
-                class="form-control"
-                id="username"
-                name="username"
-                placeholder="Benutzername eingeben"
-              />
-            </div>
-            <div class="form-group">
-              <label for="password">Passwort</label>
-              <input
-                [(ngModel)]="loginForm.password"
-                type="password"
-                class="form-control"
-                id="password"
-                name="password"
-                placeholder="Passwort eingeben"
-              />
-            </div>
-            <button type="submit" class="btn btn-primary">Anmelden</button>
-          </form>
+        <div class="form-group mb-3">
+          <input
+            [(ngModel)]="loginForm.value.password"
+            type="password"
+            name="password"
+            id="password"
+            class="form-control"
+            placeholder="Password"
+            required
+          />
         </div>
-      </div>
+        <div class="d-flex justify-content-between align-items-center mb-5">
+          <input
+            type="submit"
+            name="login"
+            id="login"
+            class="btn login-btn"
+            value="Login"
+          />
+        </div>
+      </form>
+      <p class="login-wrapper-footer-text">
+        Need an account? <a href="/register" class="text-reset">Signup here</a>
+      </p>
     </div>
   </div>
 </div>
+<dialog id="loginErrorModal">
+  <p>Login failed. Please check your credentials and try again.</p>
+  <button (click)="close()">Close</button>
+</dialog>
