--- a/todolist-frontend/src/app/components/registration/registration.component.html
+++ b/todolist-frontend/src/app/components/registration/registration.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
   <div class="row justify-content-center">
     <div class="col-md-6">
       <div class="card">
@@ -57,4 +57,84 @@
       </div>
     </div>
   </div>
+</div> -->
+<div class="row">
+  <div class="col-sm-6 col-md-7 intro-section">
+    <div class="intro-content-wrapper">
+      <h1 class="intro-title">Welcome to To-do-list !</h1>
+      <p class="intro-text">
+        Melden Sie sich mit Ihren Zugangsdaten an und greifen Sie auf alle
+        Funktionen zu. Haben Sie noch keinen Zugang? Registrieren Sie sich
+        jetzt!
+      </p>
+      <a href="/register" class="btn btn-read-more">Registration</a>
+    </div>
+  </div>
+  <div class="col-sm-6 col-md-5 form-section">
+    <div class="login-wrapper">
+      <h2 class="login-title">Registrieren</h2>
+      <form (ngSubmit)="registerUser()">
+        <div class="form-group">
+          <div class="form-group mb-3">
+            <input
+              [(ngModel)]="registerForm.value.name"
+              type="name"
+              name="name"
+              id="name"
+              class="form-control"
+              placeholder="Name"
+              required
+            />
+          </div>
+          <input
+            [(ngModel)]="registerForm.value.username"
+            type="username"
+            name="username"
+            id="username"
+            class="form-control"
+            placeholder="Username"
+            required
+          />
+        </div>
+        <div class="form-group mb-3">
+          <input
+            [(ngModel)]="registerForm.value.password"
+            type="password"
+            name="password"
+            id="password"
+            class="form-control"
+            placeholder="Password"
+            required
+          />
+          <div class="form-group mb-3">
+            <input
+              [(ngModel)]="registerForm.value.email"
+              type="email"
+              name="email"
+              id="email"
+              class="form-control"
+              placeholder="E-mail"
+              required
+            />
+          </div>
+        </div>
+        <div class="d-flex justify-content-between align-items-center mb-5">
+          <input
+            type="submit"
+            name="login"
+            id="login"
+            class="btn login-btn"
+            value="Registrieren"
+          />
+        </div>
+      </form>
+      <p class="login-wrapper-footer-text">
+        Need an account? <a href="/register" class="text-reset">Signup here</a>
+      </p>
+    </div>
+  </div>
 </div>
+<dialog id="loginErrorModal">
+  <p>{{ errorMsg }}</p>
+  <button (click)="close()">Close</button>
+</dialog>
