redesign all components, bugfixed

--- a/todolist-frontend/src/app/app.component.html
+++ b/todolist-frontend/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container conntainer-fluid font-Neucha">
   <app-nav></app-nav>
-  <router-outlet></router-outlet>
+  <router-outlet class="row pt-5"></router-outlet>
   <app-footer></app-footer>
 </div>
