--- a/todolist-frontend/src/app/components/homepage/homepage.component.css
+++ b/todolist-frontend/src/app/components/homepage/homepage.component.css
@@ -1,26 +1,20 @@
-body {
-  background-color: #fff;
-  font-family: "Karla", sans-serif;
-}
-
 h1 > a {
   text-decoration: none;
   color: #fff !important;
 }
 
 .intro-section {
-  background-image: url(https://i.ibb.co/t2tbbh6/pexels-luis-quintero-2471234.jpg);
+  background-image: url(/assets/bg1.png);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   padding: 75px 95px;
-  min-height: 100vh;
+  min-height: 90vh;
   display: -webkit-box;
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  flex-direction: column;
-  color: #ffffff;
+  color: #ebefeff7;
 }
 @media (max-width: 991px) {
   .intro-section {
@@ -39,16 +33,6 @@ h1 > a {
   }
 }
 
-.brand-wrapper .logo {
-  height: 35px;
-}
-
-@media (max-width: 767px) {
-  .brand-wrapper {
-    margin-bottom: 35px;
-  }
-}
-
 .intro-content-wrapper {
   width: 410px;
   max-width: 100%;
@@ -63,10 +47,12 @@ h1 > a {
 .intro-content-wrapper .intro-text {
   font-size: 19px;
   line-height: 1.37;
+  font-weight: bold;
 }
 .intro-content-wrapper .btn-read-more {
   background-color: #fff;
   padding: 13px 30px;
+  margin-right: 10px;
   border-radius: 0;
   font-size: 16px;
   font-weight: bold;
@@ -76,97 +62,4 @@ h1 > a {
   background-color: transparent;
   border: 1px solid #fff;
   color: #fff;
-}
-
-@media (max-width: 767px) {
-  .intro-section-footer {
-    margin-top: 35px;
-  }
-}
-
-.intro-section-footer .footer-nav a {
-  font-size: 20px;
-  font-weight: bold;
-  color: inherit;
-}
-@media (max-width: 767px) {
-  .intro-section-footer .footer-nav a {
-    font-size: 14px;
-  }
-}
-.intro-section-footer .footer-nav a + a {
-  margin-left: 30px;
-}
-
-.form-section {
-  display: -webkit-box;
-  display: flex;
-  -webkit-box-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  justify-content: center;
-}
-@media (max-width: 767px) {
-  .form-section {
-    padding: 35px;
-  }
-}
-
-.login-wrapper {
-  width: 300px;
-  max-width: 100%;
-}
-@media (max-width: 575px) {
-  .login-wrapper {
-    width: 100%;
-  }
-}
-.login-wrapper .form-control {
-  border: 0;
-  border-bottom: 1px solid #e7e7e7;
-  border-radius: 0;
-  font-size: 14px;
-  font-weight: bold;
-  padding: 15px 10px;
-  margin-bottom: 7px;
-}
-.login-wrapper .form-control::-webkit-input-placeholder {
-  color: #b0adad;
-}
-.login-wrapper .form-control::-moz-placeholder {
-  color: #b0adad;
-}
-.login-wrapper .form-control:-ms-input-placeholder {
-  color: #b0adad;
-}
-.login-wrapper .form-control::-ms-input-placeholder {
-  color: #b0adad;
-}
-.login-wrapper .form-control::placeholder {
-  color: #b0adad;
-}
-
-.login-title {
-  font-size: 30px;
-  font-weight: bold;
-  margin-bottom: 30px;
-}
-
-.login-btn {
-  padding: 13px 30px;
-  background-color: #000;
-  border-radius: 0;
-  font-size: 20px;
-  font-weight: bold;
-  color: #fff;
-}
-.login-btn:hover {
-  border: 1px solid #000;
-  background-color: transparent;
-  color: #000;
-}
-
-.login-wrapper-footer-text {
-  font-size: 14px;
-  text-align: center;
 }
