--- a/todolist-frontend/src/app/components/homepage/homepage.component.html
+++ b/todolist-frontend/src/app/components/homepage/homepage.component.html
@@ -1,63 +1,16 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-sm-6 col-md-7 intro-section">
-      <div class="brand-wrapper">
-        <h1><a href="https://stackfindover.com/">Logo</a></h1>
-      </div>
+    <div class="col-sm-6 col-md-12 intro-section">
       <div class="intro-content-wrapper">
         <h1 class="intro-title">Welcome to website !</h1>
         <p class="intro-text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna
+          Bitte loggen Sie sich ein, um fortzufahren. Sie haben noch keinen
+          Zugang? Registrieren Sie sich jetzt kostenlos!Bitte loggen Sie sich
+          ein, um fortzufahren. Sie haben noch keinen Zugang? Registrieren Sie
+          sich jetzt!
         </p>
-        <a href="#!" class="btn btn-read-more">Read more</a>
-      </div>
-      <div class="intro-section-footer">
-        <nav class="footer-nav">
-          <a href="#!">Facebook</a>
-          <a href="#!">Twitter</a>
-          <a href="#!">Gmail</a>
-        </nav>
-      </div>
-    </div>
-    <div class="col-sm-6 col-md-5 form-section">
-      <div class="login-wrapper">
-        <h2 class="login-title">Sign in</h2>
-        <form action="#!">
-          <div class="form-group">
-            <label for="email" class="sr-only">Email</label>
-            <input
-              type="email"
-              name="email"
-              id="email"
-              class="form-control"
-              placeholder="Email"
-            />
-          </div>
-          <div class="form-group mb-3">
-            <label for="password" class="sr-only">Password</label>
-            <input
-              type="password"
-              name="password"
-              id="password"
-              class="form-control"
-              placeholder="Password"
-            />
-          </div>
-          <div class="d-flex justify-content-between align-items-center mb-5">
-            <input
-              name="login"
-              id="login"
-              class="btn login-btn"
-              type="button"
-              value="Login"
-            />
-            <a href="#!" class="forgot-password-link">Password?</a>
-          </div>
-        </form>
-        <p class="login-wrapper-footer-text">
-          Need an account? <a href="#!" class="text-reset">Signup here</a>
-        </p>
+        <a href="/login" class="btn btn-read-more">Login</a>
+        <a href="/register" class="btn btn-read-more">Registration</a>
       </div>
     </div>
   </div>
