bugfix on update date

--- a/todolist-frontend/src/app/components/nav/nav.component.html
+++ b/todolist-frontend/src/app/components/nav/nav.component.html
@@ -1,53 +1,29 @@
-<nav
-  class="navbar navbar-expand-lg fixed-top navbar-scroll shadow-0"
-  style="background-color: #ffede7"
->
+<nav class="navbar navbar-expand-lg fixed-top navbar-scroll shadow-0" style="background-color: #ffede7">
   <div class="container">
-    <a class="navbar-brand" [routerLink]="isLoggedIn() ? '/tasks' : '/'"
-      >To-do-list</a
-    >
-    <button
-      class="navbar-toggler ps-0"
-      type="button"
-      data-mdb-toggle="collapse"
-      data-mdb-target="#navbarExample01"
-      aria-controls="navbarExample01"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
+    <a class="navbar-brand" [routerLink]="isLoggedIn() ? '/tasks' : '/'">To-do-list</a>
+    <button class="navbar-toggler ps-0" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarExample01"
+      aria-controls="navbarExample01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="d-flex justify-content-start align-items-center">
         <i class="fas fa-bars"></i>
       </span>
     </button>
     <div class="collapse navbar-collapse" id="navbarExample01">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item active">
-          <a class="nav-link px-3" *ngIf="!isLoggedIn()" routerLink="/login"
-            >Login</a
-          >
+        <li class="nav-item active" *ngIf="!isLoggedIn()">
+          <a class="nav-link px-3" routerLink="/login">Login</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link px-3" *ngIf="!isLoggedIn()" routerLink="/register"
-            >Registrieren</a
-          >
-        </li>
-        <li class="nav-item">
-          <a class="nav-link px-3" href="#!">about us</a>
+        <li class="nav-item" *ngIf="!isLoggedIn()">
+          <a class="nav-link px-3" routerLink="/register">Registrieren</a>
         </li>
         <li class="nav-item dropdown" *ngIf="isLoggedIn()">
-          <a
-            class="nav-link px-3 dropdown-toggle"
-            href="#"
-            id="navbarDropdown"
-            role="button"
-            data-toggle="dropdown"
-            aria-haspopup="true"
-            aria-expanded="false"
-            >User</a
-          >
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" (click)="logoutUser()">Logout</a>
-          </div>
+          <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+            aria-expanded="false">
+            <b>{{getUsername()}}</b>
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" (click)="logoutUser()">Logout</a></li>
+            <!-- Weitere Dropdown-Elemente können hier hinzugefügt werden -->
+          </ul>
         </li>
       </ul>
     </div>
