--- a/todolist-frontend/src/app/components/update-task/update-task.component.html
+++ b/todolist-frontend/src/app/components/update-task/update-task.component.html
@@ -15,6 +15,7 @@
         <div class="col-md-4">
           <input
             [ngModel]="task.dueDate | date : 'yyyy-MM-dd'"
+            (change)="onChange($event)"
             type="date"
             class="form-control"
             id="due-date"
