--- a/todolist-frontend/src/app/components/homepage/homepage.component.html
+++ b/todolist-frontend/src/app/components/homepage/homepage.component.html
@@ -5,9 +5,7 @@
         <h1 class="intro-title">Welcome to website !</h1>
         <p class="intro-text">
           Bitte loggen Sie sich ein, um fortzufahren. Sie haben noch keinen
-          Zugang? Registrieren Sie sich jetzt kostenlos!Bitte loggen Sie sich
-          ein, um fortzufahren. Sie haben noch keinen Zugang? Registrieren Sie
-          sich jetzt!
+          Zugang? Registrieren Sie sich jetzt kostenlos!
         </p>
         <a href="/login" class="btn btn-read-more">Login</a>
         <a href="/register" class="btn btn-read-more">Registration</a>
