--- a/todolist-frontend/src/app/components/update-task/update-task.component.html
+++ b/todolist-frontend/src/app/components/update-task/update-task.component.html
@@ -1,5 +1,5 @@
 <div class="row pt-3">
-  <h1 class="col col-md-12">Neuen Todo</h1>
+  <h1 class="col col-md-12">Update Todo</h1>
   <div class="card mb-3">
     <div class="card-body">
       <div class="row">
