update readme and minorchange

--- a/todolist-frontend/src/app/components/dashboard/dashboard.component.html
+++ b/todolist-frontend/src/app/components/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
         <button class="button col-10" type="submit" routerLink="/tasks/add">
           Neues To-dos
         </button>
-        <button class="button col-2" (click)="removeAllTask()">Löschens</button>
+        <button class="button col-2" (click)="removeAllTask()">Delete All</button>
       </div>
       <div class="card-content mx-auto pt-3">
         <div class="row row-cols-2">
